# ChemAgent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  REFACTOR_SUMMARY.md  SOURCE_MAP.md  compose.yaml  dev.sh  docker-compose.yml  smoke_test.py  start-local.ps1  test.sdf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/.data/: langgraph-checkpoints.sqlite  langgraph-checkpoints.sqlite-shm  langgraph-checkpoints.sqlite-wal
backend/app/: main.py  worker.py
backend/app/agents/: __init__.py  brain.py  chemist.py  config.py  decorators.py  engine.py  engine_sse.py  execution_context.py  executor.py  factory.py  graph.py  lg_tools.py  manager.py  pending_jobs.py  postprocessors.py  prompts.py  reasoning_client.py  runtime.py  state.py  sub_agent_prompts.py  sub_graph.py  subagent_protocol.py  subagent_runtime_tools.py  tool_registry.py  utils.py
backend/app/agents/contracts/: delegation.py  protocol.py  report.py
backend/app/agents/main_agent/: __init__.py  engine.py  engine_sse.py  graph.py  runtime.py
backend/app/agents/memory/: __init__.py  checkpointer.py  history.py  scratchpad.py
backend/app/agents/middleware/: __init__.py  postprocessors.py  sanitization.py  workspace.py
backend/app/api/: __init__.py  babel_api.py  chat.py  event_bridge.py  events.py  health.py  protocol.py  rdkit_api.py  runtime.py  scratchpad_api.py  sessions.py  sse_chat.py
backend/app/chem/: babel_ops.py  rdkit_ops.py
backend/app/core/: __init__.py  artifact_store.py  config.py  context.py  executor.py  limiter.py  network.py  plan_store.py  redis_client.py  redis_pool.py  scratchpad_store.py  task_bridge.py  task_queue.py  task_registry.py  tooling.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/services/: __init__.py
backend/app/skills/: __init__.py  base.py  loader.py  manager.py
backend/app/tools/: __init__.py  base.py  catalog.py  chem_tools.py  decorators.py  metadata.py  molecule_pipeline.py  pubchem.py  rdkit_ui.py  registry.py  web_search.py
backend/app/workers/: __init__.py  chem_tasks.py  main.py
backend/tests/: conftest.py  test_artifact_store.py  test_chat_models_api.py  test_engine.py  test_events.py  test_executor.py  test_golden_scenario_node.py  test_mvp_routing.py  test_prompts.py  test_safe_chem_tool.py  test_scenario_mvp.py  test_sessions.py  test_sse_stream.py  test_sub_agent.py  test_subagent_protocol.py  test_task_runner_bridge.py  test_tools.py  test_workspace_applicator.py  test_workspace_delta.py
docs/: API.md  Plan.md  (+13 more)
(+316 files in other folders)
