[project]
name = "backend"
version = "0.1.0"
description = "ChemAgent — multi-agent AI Copilot + deterministic chemistry toolkit (RDKit / Open Babel)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2[openai]>=0.11.2",
    "arq>=0.26",
    "fastapi>=0.135.1",
    "openbabel-wheel>=3.1.1.23",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.22",
    "rdkit>=2025.9.6",
    "redis[hiredis]>=5.0",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that hit real LLM / network APIs (deselect with '-m \"not slow\"')",
]
