[project]
name = "backend"
version = "0.1.0"
description = "ChemAgent — multi-agent AI Copilot + deterministic chemistry toolkit (RDKit / Open Babel)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── LangGraph stack ──────────────────────────────────────────────────────
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-openai>=1.1.12",
    "langchain-core>=1.2.23",
    # ── Web framework & servers ──────────────────────────────────────────────
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    # ── Chemistry ────────────────────────────────────────────────────────────
    "rdkit>=2025.9.6",
    "openbabel-wheel>=3.1.1.23",
    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.22",
    # ── Task queue (RDKit REST API async worker) ──────────────────────────────
    "arq>=0.26",
    "redis[hiredis]>=5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
